--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
+    implementation 'org.springframework.data:spring-data-jdbc'
+    testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
